--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Random-user by JV17</title>
+    <title>Random User in Objective-c by JV17</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Random-user</h1>
+        <h1>Random User in Objective-c</h1>
         <h2></h2>
         <a href="https://github.com/JV17/Random-User" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -28,37 +28,43 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <h2>
+<a id="random-user---objective-c" class="anchor" href="#random-user---objective-c" aria-hidden="true"><span class="octicon octicon-link"></span></a>Random User - (Objective-C)</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This is a programming challenge app. It loads random user with some of their personal information like name, email, phone#, address, birthday and password which is provided from the <a href="https://randomuser.me/">https://randomuser.me/</a> </p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h2>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p><strong>1)</strong> Download the zip file and extract it in your preferred folder.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p><strong>2)</strong> Then, just open the project file located at Random-User/Random User.xcodeproj (double click on it).</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p><strong>3)</strong> Xcode will be launched and load the project.</p>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p><strong>4)</strong> Finally, just run the project. Something to keep in mind is that this project has been develop in iOS 8 for iPhone5+ devices.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p><strong>DONE!</strong></p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h2>
+<a id="screenshot-1" class="anchor" href="#screenshot-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot #1</h2>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><img src="http://s23.postimg.org/92vzfjrij/Photo_2014_12_16_4_44_17_PM.png" alt="Screenshot-1"></p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h2>
+<a id="screenshot-2" class="anchor" href="#screenshot-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot #2</h2>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p><img src="http://s12.postimg.org/ste725y1p/Photo_2014_12_16_7_00_02_PM.png" alt="Screenshot-2"></p>
+
+<h2>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h2>
+
+<p>Just myself <a href="https://github.com/jv17" class="user-mention">@jv17</a>, I decided to this programming challenge for fun and maybe help others who are doing the same.</p>
+
+<h2>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h2>
+
+<p>Check out my website <a href="http://jorgedeveloper.com">http://jorgedeveloper.com</a> or contact me at <a href="mailto:jv17@github.com">jv17@github.com</a> and I will be happy to help you.</p>
         </section>
 
         <aside id="sidebar">
