--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Random User in Objective-c by JV17</title>
+    <title>Random User by JV17</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Random User in Objective-c</h1>
+        <h1>Random User</h1>
         <h2></h2>
         <a href="https://github.com/JV17/Random-User" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -28,13 +28,13 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h2>
-<a id="random-user---objective-c" class="anchor" href="#random-user---objective-c" aria-hidden="true"><span class="octicon octicon-link"></span></a>Random User - (Objective-C)</h2>
+          <h3>
+<a id="random-user---objective-c" class="anchor" href="#random-user---objective-c" aria-hidden="true"><span class="octicon octicon-link"></span></a>Random User - (Objective-C)</h3>
 
 <p>This is a programming challenge app. It loads random user with some of their personal information like name, email, phone#, address, birthday and password which is provided from the <a href="https://randomuser.me/">https://randomuser.me/</a> </p>
 
-<h2>
-<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
+<h3>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h3>
 
 <p><strong>1)</strong> Download the zip file and extract it in your preferred folder.</p>
 
@@ -46,23 +46,23 @@
 
 <p><strong>DONE!</strong></p>
 
-<h2>
-<a id="screenshot-1" class="anchor" href="#screenshot-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot #1</h2>
+<h3>
+<a id="screenshot-1" class="anchor" href="#screenshot-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot #1</h3>
 
 <p><img src="http://s23.postimg.org/92vzfjrij/Photo_2014_12_16_4_44_17_PM.png" alt="Screenshot-1"></p>
 
-<h2>
-<a id="screenshot-2" class="anchor" href="#screenshot-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot #2</h2>
+<h3>
+<a id="screenshot-2" class="anchor" href="#screenshot-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot #2</h3>
 
 <p><img src="http://s12.postimg.org/ste725y1p/Photo_2014_12_16_7_00_02_PM.png" alt="Screenshot-2"></p>
 
-<h2>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h2>
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>Just myself <a href="https://github.com/jv17" class="user-mention">@jv17</a>, I decided to this programming challenge for fun and maybe help others who are doing the same.</p>
 
-<h2>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h2>
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Check out my website <a href="http://jorgedeveloper.com">http://jorgedeveloper.com</a> or contact me at <a href="mailto:jv17@github.com">jv17@github.com</a> and I will be happy to help you.</p>
         </section>
