Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>
 <a id="random-user---objective-c" class="anchor" href="#random-user---objective-c" aria-hidden="true"><span class="octicon octicon-link"></span></a>Random User - (Objective-C)</h3>
 
-<p>This is a programming challenge app. It loads random user with some of their personal information like name, email, phone#, address, birthday and password which is provided from the <a href="https://randomuser.me/">https://randomuser.me/</a> </p>
+<p>This is a programming challenge app. It loads random user with some of their personal information like name, email, phone#, address, birthday and password which is provided from the <a href="https://randomuser.me/">https://randomuser.me/</a> API.</p>
 
 <h3>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h3>
