Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Random User</h1>
-        <h2></h2>
+        <h2>A Programming Challenge App</h2>
         <a href="https://github.com/JV17/Random-User" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
