Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
 <p><strong>DONE!</strong></p>
 
 <h3>
+<a id="preview" class="anchor" href="#preview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Preview</h3>
+
+<p><img src="http://s2.postimg.org/mzitunfd3/randomuser.gif" alt="preview"></p>
+
+<h3>
 <a id="screenshot-1" class="anchor" href="#screenshot-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot #1</h3>
 
 <p><img src="http://s23.postimg.org/92vzfjrij/Photo_2014_12_16_4_44_17_PM.png" alt="Screenshot-1"></p>
