--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h3>
 <a id="preview" class="anchor" href="#preview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Preview</h3>
 
-<p><img src="http://jorgedeveloper.com/previews/randomuser.gif" alt="preview"></p>
+<p><img src="Previews/randomuser.gif" alt="preview"></p>
 
 <h3>
 <a id="screenshot-1" class="anchor" href="#screenshot-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot #1</h3>
